# sqlx_demo

./: .gitignore  Cargo.toml  README
scripts/: create_db.sh  init.sql
src/: main.rs  restclient
